build java-build container

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,5 +1,5 @@
 FROM ubuntu:16.04
-RUN apt-get -y update && apt-get -y install openjdk-9-jdk make
+RUN apt-get -y update && apt-get -y install default-jdk make
 
 ENV SRC_HOME=/opt/src/
 RUN mkdir -p $SRC_HOME
