combine two makefiles into one make

--- a/subdir/makefile
+++ b/subdir/makefile
@@ -1,4 +1,11 @@
+PARENT_DIR=/home/preston/docker-experiment
+DOCKER=sudo docker run --rm -v $(PARENT_DIR):/opt/src upython
+CURRENT_DIR=subdir
+
 PYTHON=python3
+
+docker-test:	./child.py ../parent.py
+	$(DOCKER) $(MAKE) -C $(CURRENT_DIR) test
 
 test:	./child.py ../parent.py
 	$(PYTHON) child.py
